Cambie los caracteres raros

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <h1>SAU2 DESDE TEI</h1>
-  <h2>Enseñandole git a Oscar</h2>
-  <h3>Hola agregué esta línea</h3>
+  <h2>Ensenandole git a Oscar</h2>
+  <h3>Hola agregue esta linea</h3>
   <b></b>
 </html>
