--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
-<html>
-  <h1>SAU2 DESDE TEI</h1>
-  <h2>Ensenandole git a Oscar</h2>
-  <h3>Hola agregue esta linea</h3>
-  <b></b>
-	esto lo quiero guardar
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>Parallax Scrolling Tutorial</title>
+  <meta name="description" content="Mustard Interactive">
+  <meta name="author" content="Roca9 // Agustin Leñero // Oscar Rubio">
+
+  <!-- Mmmmm, Google Web Fonts. That's a paddlin'. -->
+  <link href='http://fonts.googleapis.com/css?family=Arimo:400,400italic,700' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <div id="main" role="main">
+    Mustard Interactive
+  </div>
+</body>
 </html>
